# ni-pdp-semestral

./: .gitignore  CMakeLists.txt  Dockerfile  main.cpp  readme.txt  scratch.txt  star.csv
jobs/: data_job.sh  gen.sh  mpi_job.sh  sequential_job.sh  task_job.sh
jobs/suite/10__20_12/sequential/: sequential_job.sh
jobs/suite/10__20_7/sequential/: sequential_job.sh
jobs/suite/10__30_10/sequential/: sequential_job.sh
jobs/suite/15__30_10/sequential/: sequential_job.sh
jobs/suite/15__30_20/sequential/: sequential_job.sh
jobs/suite/15__40_8/sequential/: sequential_job.sh
jobs/suite/20__40_15/sequential/: sequential_job.sh
jobs/suite/20__40_25/sequential/: sequential_job.sh
jobs/suite/20__40_8/sequential/: sequential_job.sh
jobs/suite/5__10_5/: data_job.sh  mpi_job.sh  task_job.sh
jobs/suite/5__10_5/sequential/: sequential_job.sh
jobs/suite/5__10_6b/sequential/: sequential_job.sh
jobs/suite/7__20_7/sequential/: sequential_job.sh
report/: .gitignore  report.bib  report.tex
results/: extract.ipynb  prune-my-jobs.sh  queue.sh  queue2.sh  queue3.sh  queue_long.sh
results/suite/10__20_12/sequential/: sequential_job.sh.o218373
results/suite/5__10_5/: queue.sh
results/suite/5__10_5/sequential/: sequential_job.sh.o218229
src/: data.cpp  mpi.cpp  sequential.cpp  task.cpp
tests/provided/10_6b/: in.txt
tests/provided/20_12/: in.txt
tests/provided/20_17/: in.txt
tests/provided/20_7/: in.txt
tests/provided/30_10/: in.txt
tests/provided/30_20/: in.txt
tests/provided/40_15/: in.txt
tests/provided/40_25/: in.txt
tests/provided/40_8/: in.txt
(+662 files in other folders)
